--- a/index - copia - copia.html
+++ b/index - copia - copia.html
@@ -5,266 +5,230 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Baby Shower · Portada</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+
 <style>
-  :root{
-    --bg1:#fbfdff;
-    --bg2:#f3f9ff;
-    --paper:#ffffff;
+:root{
+  --paper:#ffffff;
+  --ink:#1f2937;
+  --line: rgba(31,41,55,.12);
 
-    --ink:#1f2937;
-    --line: rgba(31,41,55,.12);
+  /* Sobre */
+  --env:#7fc3eb;
+  --env-edge:#74b9e2;
 
-    /* Azul claro del sobre (base) */
-    --env:#bfe9ff;
+  --shadow: 0 18px 60px rgba(2,20,40,.14);
+  --shadow2: 0 10px 30px rgba(2,20,40,.10);
 
-    --shadow: 0 18px 60px rgba(2,20,40,.14);
-    --shadow2: 0 10px 30px rgba(2,20,40,.10);
-    --radius: 22px;
-  }
+  --radius-envelope:6px;
+}
 
-  *{ box-sizing:border-box; }
-  body{
-    margin:0;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    background:
-      radial-gradient(900px 520px at 15% 0%, rgba(143,211,255,.22), transparent 55%),
-      radial-gradient(900px 620px at 100% 12%, rgba(191,233,255,.28), transparent 55%),
-      linear-gradient(180deg, var(--bg1), var(--bg2));
-  }
+*{box-sizing:border-box;}
+body{
+  margin:0;
+  font-family:'Poppins', system-ui, sans-serif;
 
-  .page1{
-    min-height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:18px 14px;
-  }
+  /* ✅ FONDO GENERAL */
+  background: url("file:///C:/Users/win10/Downloads/invitación%20babyshower/fondo.png") center / cover no-repeat fixed;
+}
 
-  .frame{
-    width:100%;
-    max-width:520px;
-  }
+.page1{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:18px 14px;
+}
 
-  .card{
-    background:var(--paper);
-    border:1px solid var(--line);
-    border-radius: var(--radius);
-    box-shadow: var(--shadow);
-    padding:16px;
-    text-align:center;
-  }
+.frame{
+  width:100%;
+  max-width:520px;
+}
 
-  /* ===== Imagen superior (elefantito) ===== */
-  .hero{
-    height:230px;
-    border-radius:18px;
-    border:1px solid var(--line);
-    overflow:hidden;
-    background:#fff;
-    box-shadow: var(--shadow2);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-  }
-  .hero img{
-    width:100%;
-    height:100%;
-    object-fit:contain;
-    padding:6px;
-    display:block;
-  }
+.card{
+  background: rgba(255,255,255,.88);
+  border:1px solid var(--line);
+  border-radius:22px;
+  box-shadow: var(--shadow);
+  padding:20px 16px;
+  text-align:center;
+  backdrop-filter: blur(4px);
+}
 
-  /* ===== Sobre tipo TikTok ===== */
-  .envelopeWrap{
-    width:min(420px, 96%);
-    margin: 20px auto 0;
-    position:relative;
-  }
+/* ===== ELEFANTE ===== */
+.hero{
+  display:flex;
+  justify-content:center;
+}
+.hero img{
+  width:min(420px,98%);
+  display:block;
+  filter: drop-shadow(0 18px 40px rgba(2,20,40,.18));
+}
 
-  .envelope{
-    width:100%;
-    aspect-ratio: 16 / 10;
-    position:relative;
-    border-radius:18px;
-    overflow:hidden;
-    border:1px solid rgba(31,41,55,.10);
-    box-shadow: var(--shadow);
-    background: var(--env);
-  }
+/* TEXTO DEBAJO DEL ELEFANTE */
+.subtitle{
+  margin-top: 8px;
+  margin-bottom: 14px;
+  font-size: 20px;
+  font-weight: 800;
+  letter-spacing: .3px;
+  color: rgba(31,41,55,.85);
+}
 
-  /* Textura de “papel” (muy sutil, sin degradados de color) */
-  .envelope::before{
-    content:"";
-    position:absolute; inset:0;
-    background-image:
-      repeating-linear-gradient(45deg, rgba(255,255,255,.06), rgba(255,255,255,.06) 2px, transparent 2px, transparent 7px);
-    opacity:.55;
-    pointer-events:none;
-  }
+/* ===== SOBRE ===== */
+.envelopeWrap{
+  width:min(440px,98%);
+  margin:10px auto 0;
+  position:relative;
+}
 
-  /* Pliegues del sobre (mismo azul, solo sombras) */
-  .flapTop{
-    position:absolute;
-    left:0; right:0; top:0;
-    height:64%;
-    background: var(--env);
-    clip-path: polygon(0 0, 100% 0, 50% 100%);
-    z-index:3;
-    /* sombra del pliegue */
-    box-shadow: 0 10px 18px rgba(2,20,40,.10);
-  }
+.envelope{
+  width:100%;
+  aspect-ratio:16/10;
+  position:relative;
+  overflow:hidden;
+  border:1px solid rgba(31,41,55,.10);
+  box-shadow: var(--shadow);
+  background: var(--env);
+  border-radius: var(--radius-envelope);
+}
 
-  .flapLeft{
-    position:absolute;
-    inset:0;
-    background: var(--env);
-    clip-path: polygon(0 0, 50% 50%, 0 100%);
-    z-index:2;
-    filter: brightness(.98);
-  }
+/* textura papel */
+.envelope::before{
+  content:"";
+  position:absolute; inset:0;
+  background-image:
+    repeating-linear-gradient(
+      45deg,
+      rgba(255,255,255,.06),
+      rgba(255,255,255,.06) 2px,
+      transparent 2px,
+      transparent 7px
+    );
+  opacity:.55;
+}
 
-  .flapRight{
-    position:absolute;
-    inset:0;
-    background: var(--env);
-    clip-path: polygon(100% 0, 50% 50%, 100% 100%);
-    z-index:2;
-    filter: brightness(.98);
-  }
+/* pliegues */
+.flapTop{
+  position:absolute;
+  left:0; right:0; top:0;
+  height:64%;
+  background: var(--env);
+  clip-path: polygon(0 0, 100% 0, 50% 100%);
+  z-index:3;
+}
+.flapLeft{
+  position:absolute; inset:0;
+  background: var(--env-edge);
+  clip-path: polygon(0 0, 50% 50%, 0 100%);
+  z-index:2;
+}
+.flapRight{
+  position:absolute; inset:0;
+  background: var(--env-edge);
+  clip-path: polygon(100% 0, 50% 50%, 100% 100%);
+  z-index:2;
+}
+.flapBottom{
+  position:absolute; inset:0;
+  background: var(--env);
+  clip-path: polygon(0 100%, 50% 48%, 100% 100%);
+  z-index:1;
+  filter: brightness(.97);
+}
 
-  .flapBottom{
-    position:absolute;
-    inset:0;
-    background: var(--env);
-    clip-path: polygon(0 100%, 50% 48%, 100% 100%);
-    z-index:1;
-    filter: brightness(.96);
-  }
+/* TEXTO CURVO */
+.arcText{
+  position:absolute;
+  left:50%;
+  top:34%;
+  transform: translate(-50%,-50%);
+  width:220px;
+  height:120px;
+  z-index:8;
+  pointer-events:none;
+}
+.arcText text{
+  font-weight:800;
+  letter-spacing:1px;
+  text-transform:uppercase;
+  fill:#1f2937;
+  font-size:14px;
+}
 
-  /* Marco interior (como “borde” del sobre) */
-  .innerBorder{
-    position:absolute; inset:14px;
-    border-radius:14px;
-    border:1px solid rgba(31,41,55,.08);
-    z-index:0;
-    pointer-events:none;
-  }
+/* ===== SELLO (BOTÓN) ===== */
+.sealShadow{
+  position:absolute;
+  left:50%;
+  top:60%;
+  transform:translate(-50%,-50%);
+  width:120px;
+  height:26px;
+  border-radius:999px;
+  background:rgba(2,20,40,.22);
+  filter:blur(14px);
+  z-index:6;
+}
 
-  /* Botón invisible para click */
-  .openBtn{
-    position:absolute; inset:0;
-    border:none;
-    background:none;
-    cursor:pointer;
-    z-index:10;
-  }
+.sealBtn{
+  position:absolute;
+  left:50%;
+  top:52%;
+  transform:translate(-50%,-50%);
+  width:90px;
+  height:90px;
+  z-index:10;
+  background:none;
+  border:none;
+  cursor:pointer;
+  padding:0;
+}
+.sealBtn img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  filter: drop-shadow(0 6px 12px rgba(2,20,40,.18));
+}
 
-  /* Sello */
-  .sealShadow{
-    position:absolute;
-    left:50%;
-    top:56%;
-    transform: translate(-50%,-50%);
-    width:120px;
-    height:24px;
-    border-radius:999px;
-    background: rgba(2,20,40,.22);
-    filter: blur(14px);
-    z-index:6;
-    pointer-events:none;
-  }
-
-  .seal{
-    position:absolute;
-    left:50%;
-    top:49%;
-    transform: translate(-50%,-50%);
-    width:84px;
-    height:84px;
-    border-radius:999px;
-    overflow:hidden;
-    background:#fff;
-    border:1px solid rgba(31,41,55,.10);
-    box-shadow: 0 20px 36px rgba(2,20,40,.18);
-    z-index:7;
-    display:grid;
-    place-items:center;
-  }
-  .seal img{
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    display:block;
-  }
-
-  /* Texto curvo “VER INVITACIÓN” como TikTok */
-  .arcText{
-    position:absolute;
-    left:50%;
-    top:34%;
-    transform: translate(-50%,-50%);
-    width: 210px;
-    height: 110px;
-    z-index:8;
-    pointer-events:none;
-  }
-  .arcText text{
-    font-weight: 900;
-    letter-spacing: 1.2px;
-    text-transform: uppercase;
-    fill: rgba(31,41,55,.82);
-    font-size: 14px;
-  }
-
-  /* ===== Imagen inferior (PASE PERSONAL) ===== */
-  .bottomImgWrap{
-    margin-top: 18px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-  }
-  .bottomImgWrap img{
-    width:min(420px, 96%);
-    height:auto;
-    display:block;
-    filter: drop-shadow(0 18px 40px rgba(2,20,40,.18));
-  }
-
-  /* (Opcional) animación: abrir solapa */
-  .openState .flapTop{
-    transform-origin: top;
-    transform: rotateX(-150deg);
-    transition: transform .85s cubic-bezier(.2,.9,.2,1);
-  }
+/* ===== PASE PERSONAL ===== */
+.paseWrap{
+  margin-top:18px;
+  display:flex;
+  justify-content:center;
+}
+.paseWrap img{
+  width:min(440px,98%);
+  filter: drop-shadow(0 18px 40px rgba(2,20,40,.18));
+}
 </style>
 </head>
 
 <body>
-<section class="page1" id="page1">
+<section class="page1">
   <div class="frame">
     <div class="card">
 
-      <!-- Imagen superior -->
+      <!-- Elefante -->
       <div class="hero">
-        <img src="img/elefante.png" alt="Elefantito" />
+        <img src="C:\Users\win10\Downloads\invitación babyshower\elefante-nombre.png" alt="Elefantito">
       </div>
+
+      <!-- 👇 TEXTO EXACTAMENTE DEBAJO -->
+      <div class="subtitle">Mi Baby Shower</div>
 
       <!-- Sobre -->
       <div class="envelopeWrap">
-        <div id="envelope" class="envelope">
-
-          <div class="innerBorder"></div>
+        <div class="envelope">
 
           <div class="flapBottom"></div>
           <div class="flapLeft"></div>
           <div class="flapRight"></div>
           <div class="flapTop"></div>
 
-          <!-- Texto curvo -->
-          <svg class="arcText" viewBox="0 0 220 120" aria-hidden="true">
+          <svg class="arcText" viewBox="0 0 220 120">
             <defs>
-              <!-- arco -->
-              <path id="arcPath" d="M 30 95 Q 110 20 190 95" />
+              <path id="arcPath" d="M 28 96 Q 110 20 192 96"/>
             </defs>
             <text>
               <textPath href="#arcPath" startOffset="50%" text-anchor="middle">
@@ -273,20 +237,19 @@
             </text>
           </svg>
 
-          <!-- Sello -->
-          <div class="sealShadow" aria-hidden="true"></div>
-          <div class="seal">
-            <img src="img/sello.png" alt="Sello" />
-          </div>
+          <div class="sealShadow"></div>
 
-          <!-- Botón click -->
-          <button id="openBtn" class="openBtn" type="button" aria-label="Ver invitación"></button>
+          <!-- BOTÓN -->
+          <button class="sealBtn" onclick="goNext()" aria-label="Ver invitación">
+            <img src="C:\Users\win10\Downloads\invitación babyshower\sello.png" alt="Sello luna">
+          </button>
+
         </div>
       </div>
 
-      <!-- Imagen de abajo: PASE PERSONAL -->
-      <div class="bottomImgWrap">
-        <img src="img/pase.png" alt="Pase personal" />
+      <!-- Pase personal -->
+      <div class="paseWrap">
+        <img src="C:\Users\win10\Downloads\invitación babyshower\pase.png" alt="Pase personal">
       </div>
 
     </div>
@@ -294,11 +257,9 @@
 </section>
 
 <script>
-  // Click: por ahora solo anima la solapa.
-  // Luego aquí se conecta a la hoja 2.
-  document.getElementById("openBtn").addEventListener("click", () => {
-    document.getElementById("envelope").classList.add("openState");
-  });
+function goNext(){
+  window.location.href = "invitacion.html";
+}
 </script>
 </body>
 </html>
