--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ body{
 
       <!-- Elefante -->
       <div class="hero">
-        <img src="img/elefante-nombre.png" alt="Elefantito">
+        <img src="C:\Users\win10\Downloads\invitación babyshower\elefante-nombre.png" alt="Elefantito">
       </div>
 
       <!-- 👇 TEXTO EXACTAMENTE DEBAJO -->
