Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{
   font-family:'Poppins', system-ui, sans-serif;
 
   /* ✅ FONDO GENERAL */
-  background: url("img/fondo.png") center / cover no-repeat fixed;
+  background: url("fondo.png") center / cover no-repeat fixed;
 }
 
 .page1{
@@ -211,7 +211,7 @@ body{
 
       <!-- Elefante -->
       <div class="hero">
-        <img src="img/elefante-nombre.png" alt="Elefantito">
+        <img src="elefante-nombre.png" alt="Elefantito">
       </div>
 
       <!-- 👇 TEXTO EXACTAMENTE DEBAJO -->
@@ -241,7 +241,7 @@ body{
 
           <!-- BOTÓN -->
           <button class="sealBtn" onclick="goNext()" aria-label="Ver invitación">
-            <img src="img/sello.png" alt="Sello luna">
+            <img src="sello.png" alt="Sello luna">
           </button>
 
         </div>
@@ -249,7 +249,7 @@ body{
 
       <!-- Pase personal -->
       <div class="paseWrap">
-        <img src="img/pase.png" alt="Pase personal">
+        <img src="pase.png" alt="Pase personal">
       </div>
 
     </div>
