--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 body{
   margin:0;
   font-family:'Poppins', system-ui, sans-serif;
-
-  /* ✅ FONDO GENERAL */
-  
+  background:#f5f9fc; /* color neutro */
 }
 
 .page1{
@@ -46,14 +44,11 @@ body{
 }
 
 .card{
-  background: url("fondo.png") center / cover no-repeat fixed;
-  background: rgba(255,255,255,.88);
-  border:1px solid var(--line);
+  background: url("img/fondo.png") center / cover no-repeat;
   border-radius:22px;
-  box-shadow: var(--shadow);
+  box-shadow: 0 18px 60px rgba(2,20,40,.14);
   padding:20px 16px;
-  text-align:center;
-  backdrop-filter: blur(4px);
+  position:relative;
 }
 
 /* ===== ELEFANTE ===== */
