--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body{
 }
 
 .card{
-  background: url("img/fondo.png") center / cover no-repeat;
+  background: url("fondo.png") center / cover no-repeat;
   border-radius:22px;
   box-shadow: 0 18px 60px rgba(2,20,40,.14);
   padding:20px 16px;
@@ -64,11 +64,14 @@ body{
 
 /* TEXTO DEBAJO DEL ELEFANTE */
 .subtitle{
-  margin-top: 8px;
+  margin-top: 6px;
   margin-bottom: 14px;
-  font-size: 20px;
-  font-weight: 800;
-  letter-spacing: .3px;
+
+  font-family: "Brush Script MT", "Brush Script Std", cursive;
+  font-size: 28px;
+  font-weight: 400;
+
+  letter-spacing: .5px;
   color: rgba(31,41,55,.85);
 }
 
@@ -146,11 +149,14 @@ body{
   pointer-events:none;
 }
 .arcText text{
-  font-weight:800;
-  letter-spacing:1px;
-  text-transform:uppercase;
-  fill:#1f2937;
-  font-size:14px;
+  font-family: Georgia, "Times New Roman", serif;
+  font-weight: 700;
+
+  letter-spacing: 1px;
+  text-transform: uppercase;
+
+  fill: #1f2937;
+  font-size: 14px;
 }
 
 /* ===== SELLO (BOTÓN) ===== */
