Add position relative to envelope styles

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ body{
   box-shadow: var(--shadow);
   background: var(--env);
   border-radius: var(--radius-envelope);
+  position: relative;
 }
 
 /* textura papel */
