--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ body{
   top:52%;
   transform:translate(-50%,-50%);
 
-  width:70px;    /* 🔹 tamaño del sello */
-  height:70px;
+  width:60px;    /* 🔹 tamaño del sello */
+  height:60px;
 
   z-index:10;
   background:none;
@@ -268,7 +268,7 @@ body{
 
   <!-- ✅ pase encima de la carta -->
   <div class="paseWrap">
-    <img src="img/pase.png" alt="Pase personal">
+    <img src="pase.png" alt="Pase personal">
   </div>
 </div>
 
