--- a/index.html
+++ b/index.html
@@ -124,14 +124,29 @@ body{
   z-index:3;
 }
 .flapLeft{
-  position:absolute; inset:0;
-  background: var(--env-edge);
+  position:absolute;
+  inset:0;
+  background: linear-gradient(
+    to right,
+    rgba(0,0,0,.18),
+    transparent 70%
+  ),
+  var(--env-edge);
+
   clip-path: polygon(0 0, 50% 50%, 0 100%);
   z-index:2;
 }
+
 .flapRight{
-  position:absolute; inset:0;
-  background: var(--env-edge);
+  position:absolute;
+  inset:0;
+  background: linear-gradient(
+    to left,
+    rgba(0,0,0,.18),
+    transparent 70%
+  ),
+  var(--env-edge);
+
   clip-path: polygon(100% 0, 50% 50%, 100% 100%);
   z-index:2;
 }
@@ -182,7 +197,7 @@ body{
 .sealBtn{
   position:absolute;
   left:50%;
-  top:52%;
+  top:56%;
   transform:translate(-50%,-50%);
 
   width:60px;    /* 🔹 tamaño del sello */
@@ -198,25 +213,28 @@ body{
   width:100%;
   height:100%;
   object-fit:contain;
-  filter: drop-shadow(0 6px 12px rgba(2,20,40,.18));
+  /* sombra muy leve */
+  filter: drop-shadow(0 2px 4px rgba(0,0,0,.15));
 }
 
 /* ===== PASE PERSONAL ===== */
 .paseWrap{
   position: absolute;
-  /* 🔹 posición: un poco más abajo del centro */
-  top: 70%;
+
+  /* 🔥 posición tipo TikTok */
+  top: 80%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
 
   z-index: 20;
-
   display: flex;
   justify-content: center;
 }
 .paseWrap img{
-  width:min(440px,98%);
-  filter: drop-shadow(0 18px 40px rgba(2,20,40,.18));
+  width: 360px;      /* 🔥 tamaño tipo TikTok */
+  max-width: 95%;    /* responsive */
+  
+  filter: drop-shadow(0 22px 40px rgba(0,0,0,.25));
 }
 </style>
 </head>
