--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body{
   width:100%;
   aspect-ratio:16/10;
   position:relative;
-  overflow:hidden;
+  overflow: visible;
   border:1px solid rgba(31,41,55,.10);
   box-shadow: var(--shadow);
   background: var(--env);
@@ -295,15 +295,14 @@ body{
           </button>
 
         <div class="envelopeWrap">
-  <div class="envelope">
-    <!-- carta -->
-  </div>
-
-  <!-- ✅ pase encima de la carta -->
-  <div class="paseWrap">
-    <img src="pase.png" alt="Pase personal">
-  </div>
-</div>
+          <div class="envelope">
+    <!-- pliegues del sobre -->
+          </div>
+      
+        <div class="paseWrap">
+          <img src="img/pase.png" alt="Pase personal">
+        </div>
+      </div>
 
     </div>
   </div>
