--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ body{
           </div>
       
         <div class="paseWrap">
-          <img src="img/pase.png" alt="Pase personal">
+          <img src="pase.png" alt="Pase personal">
         </div>
       </div>
 
