--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@ body{
           </button>
 
         <div class="envelopeWrap">
-          <div class="envelope">
+  <div class="envelope">
     <!-- pliegues del sobre -->
-          </div>
-      
-        <div class="paseWrap">
-          <img src="pase.png" alt="Pase personal">
-        </div>
-      </div>
+  </div>
 
+  <!-- ✅ pase fuera del sobre -->
+  <div class="paseWrap">
+    <img src="img/pase.png" alt="Pase personal">
+  </div>
+</div>
     </div>
   </div>
 </section>
