--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ body{
 
   <!-- ✅ pase fuera del sobre -->
   <div class="paseWrap">
-    <img src="img/pase.png" alt="Pase personal">
+    <img src="pase.png" alt="Pase personal">
   </div>
 </div>
     </div>
