--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ body{
   box-shadow: 0 18px 60px rgba(2,20,40,.14);
   padding:20px 16px;
   position:relative;
+  overflow: visible;
 }
 
 /* ===== ELEFANTE ===== */
@@ -85,6 +86,7 @@ body{
   width:min(440px,98%);
   margin:10px auto 0;
   position:relative;
+  overflow: visible
 }
 
 .envelope{
@@ -235,19 +237,17 @@ body{
 /* ===== PASE PERSONAL ===== */
 .paseWrap{
   position: absolute;
-
   /* 🔥 posición tipo TikTok */
-  top: 80%;
+  top: 84%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   z-index: 20;
   display: flex;
   justify-content: center;
 }
 .paseWrap img{
-  width: 500px;      /* 🔥 tamaño tipo TikTok */
-  max-width: 90%;    /* responsive */
+  width: 400px;      /* 🔥 tamaño tipo TikTok */
+  max-width: 94%;    /* responsive */
   
   filter: drop-shadow(0 22px 40px rgba(0,0,0,.25));
 }
