--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ body{
   border-radius:22px;
   box-shadow: 0 18px 60px rgba(2,20,40,.14);
   padding:20px 16px;
-  position:relative;
+  position: relative;
   overflow: visible;
+  padding-bottom: 240px;
 }
 
 /* ===== ELEFANTE ===== */
@@ -123,33 +124,32 @@ body{
   left:0; right:0; top:0;
   height:64%;
 
+  /* ✅ sombra justo en la línea de apertura */
   background:
-    linear-gradient(
-      to bottom,
-      transparent 60%,
-      rgba(0,0,0,.25) 100%
+    linear-gradient(to bottom,
+      rgba(255,255,255,.10) 0%,
+      rgba(255,255,255,.06) 45%,
+      rgba(0,0,0,.28) 100%
     ),
     var(--env);
 
   clip-path: polygon(0 0, 100% 0, 50% 100%);
-  z-index:3;
+  z-index: 5;
 }
 .flapLeft{
   position:absolute;
   inset:0;
 
-  /* sombra interna real */
   background:
-    linear-gradient(
-      to right,
-      rgba(0,0,0,.30),
-      rgba(0,0,0,.12) 35%,
-      transparent 70%
+    linear-gradient(to right,
+      rgba(0,0,0,.32) 0%,
+      rgba(0,0,0,.16) 35%,
+      transparent 75%
     ),
     var(--env-edge);
 
   clip-path: polygon(0 0, 50% 50%, 0 100%);
-  z-index:2;
+  z-index: 4;
 }
 
 .flapRight{
@@ -157,17 +157,17 @@ body{
   inset:0;
 
   background:
-    linear-gradient(
-      to left,
-      rgba(0,0,0,.30),
-      rgba(0,0,0,.12) 35%,
-      transparent 70%
+    linear-gradient(to left,
+      rgba(0,0,0,.32) 0%,
+      rgba(0,0,0,.16) 35%,
+      transparent 75%
     ),
     var(--env-edge);
 
   clip-path: polygon(100% 0, 50% 50%, 100% 100%);
-  z-index:2;
+  z-index: 4;
 }
+
 .flapBottom{
   position:absolute; inset:0;
   background: var(--env);
