--- a/index.html
+++ b/index.html
@@ -1,319 +1,236 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Baby Shower · Portada</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mi Baby Shower · Portada</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+  <!-- Fuentes: Poppins para general -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
 
-<style>
-:root{
-  --paper:#ffffff;
-  --ink:#1f2937;
-  --line: rgba(31,41,55,.12);
+  <style>
+    :root{
+      --ink:#1f2937;
+      --line: rgba(31,41,55,.12);
 
-  /* Sobre */
-  --env:#7fc3eb;
-  --env-edge:#74b9e2;
+      --shadow: 0 18px 60px rgba(2,20,40,.14);
+      --shadow2: 0 10px 30px rgba(2,20,40,.10);
 
-  --shadow: 0 18px 60px rgba(2,20,40,.14);
-  --shadow2: 0 10px 30px rgba(2,20,40,.10);
+      --radius-card: 22px;
+    }
 
-  --radius-envelope:6px;
-}
+    *{ box-sizing:border-box; }
 
-*{box-sizing:border-box;}
-body{
-  margin:0;
-  font-family:'Poppins', system-ui, sans-serif;
-  background:#f5f9fc; /* color neutro */
-}
+    body{
+      margin:0;
+      font-family:'Poppins', system-ui, sans-serif;
+      background:#f5f9fc; /* neutro afuera */
+    }
 
-.page1{
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  padding:18px 14px;
-}
+    .page1{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:18px 14px;
+    }
 
-.frame{
-  width:100%;
-  max-width:520px;
-}
+    .frame{
+      width:100%;
+      max-width:520px;
+    }
 
-.card{
-  background: url("fondo.png") center / cover no-repeat;
-  border-radius:22px;
-  box-shadow: 0 18px 60px rgba(2,20,40,.14);
-  padding:20px 16px;
-  position: relative;
-  overflow: visible;
-  padding-bottom: 240px;
-}
+    /* ✅ Tarjeta central con fondo SOLO adentro */
+    .card{
+      position:relative;
+      overflow: visible;                 /* ✅ para que no recorte el pase */
+      padding:20px 16px 260px 16px;      /* ✅ espacio extra abajo */
+      text-align:center;
 
-/* ===== ELEFANTE ===== */
-.hero{
-  display:flex;
-  justify-content:center;
-}
-.hero img{
-  width: 300px;       /* tamaño controlado */
-  max-width: 85%;     /*responsive en móvil */
-  display: block;
-  margin: 0 auto;
+      border:1px solid var(--line);
+      border-radius: var(--radius-card);
+      box-shadow: var(--shadow);
 
-  filter: drop-shadow(0 16px 32px rgba(2,20,40,.18));
-}
+      background: url("fondo.png") center / cover no-repeat;
+    }
 
-/* TEXTO DEBAJO DEL ELEFANTE */
-.subtitle{
-  margin: 6px auto 14px auto;
+    /* Opcional: capa blanca suave para legibilidad */
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius: var(--radius-card);
+      background: rgba(255,255,255,.55);
+      z-index:0;
+    }
 
-  font-family: "Brush Script MT", "Brush Script Std", cursive;
-  font-size: 28px;
-  font-weight: 400;
+    .card > *{
+      position:relative;
+      z-index:1;
+    }
 
-  letter-spacing: .5px;
-  color: rgba(31,41,55,.85);
+    /* ===== Elefante ===== */
+    .hero{
+      display:flex;
+      justify-content:center;
+      margin-top:4px;
+    }
+    .hero img{
+      width: 300px;        /* ✅ reducido */
+      max-width: 85%;
+      display:block;
+      margin: 0 auto;
+      filter: drop-shadow(0 16px 32px rgba(2,20,40,.18));
+    }
 
-  text-align: center;
-  display: block;
-}
+    /* ===== Mi Baby Shower (Brush Script) ===== */
+    .subtitle{
+      margin: 6px auto 14px auto;
+      text-align:center;
+      display:block;
 
-/* ===== SOBRE ===== */
-.envelopeWrap{
-  width: min(360px, 92%);   /* ✅ más pequeño (antes 440px) */
-  margin: 10px auto 0;
-  position: relative;
-  overflow: visible;
-  padding-bottom: 190px;     /* ✅ espacio para el pase grande */
-}
+      font-family: "Brush Script MT", "Brush Script Std", cursive;
+      font-size: 28px;
+      font-weight: 400;
+      letter-spacing: .5px;
+      color: rgba(31,41,55,.85);
+    }
 
-.envelope{
-  width:100%;
-  aspect-ratio:16/10;
-  position:relative;
-  overflow: visible;
-  border:1px solid rgba(31,41,55,.10);
-  box-shadow: var(--shadow);
-  background: var(--env);
-  border-radius: var(--radius-envelope);
-  position: relative;
-}
+    /* ===== Sobre como imagen ===== */
+    .envelopeWrap{
+      width: min(380px, 92%);   /* ✅ tamaño del sobre (más pequeño) */
+      margin: 10px auto 0;
+      position: relative;
+      overflow: visible;
+      padding-bottom: 190px;     /* ✅ espacio para que pase sobresalga */
+    }
 
-/* textura papel */
-.envelope::before{
-  content:"";
-  position:absolute; inset:0;
-  background-image:
-    repeating-linear-gradient(
-      45deg,
-      rgba(255,255,255,.06),
-      rgba(255,255,255,.06) 2px,
-      transparent 2px,
-      transparent 7px
-    );
-  opacity:.55;
-}
+    .envelopeImg{
+      width: 100%;
+      aspect-ratio: 16/10;       /* ajusta si tu imagen es distinta */
+      position: relative;
+      overflow: visible;
 
-/* pliegues */
-.flapTop{
-  position:absolute;
-  left:0; right:0; top:0;
-  height:64%;
+      background: url("img/sobre.png") center / contain no-repeat;
+    }
 
-  /* ✅ sombra justo en la línea de apertura */
-  background:
-    linear-gradient(to bottom,
-      rgba(255,255,255,.10) 0%,
-      rgba(255,255,255,.06) 45%,
-      rgba(0,0,0,.28) 100%
-    ),
-    var(--env);
+    /* Texto curvo - Georgia */
+    .arcText{
+      position:absolute;
+      left:50%;
+      top:34%;
+      transform: translate(-50%,-50%);
+      width:220px;
+      height:120px;
+      z-index:8;
+      pointer-events:none;
+    }
+    .arcText text{
+      font-family: Georgia, "Times New Roman", serif;
+      font-weight: 700;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      fill: #1f2937;
+      font-size: 14px;
+    }
 
-  clip-path: polygon(0 0, 100% 0, 50% 100%);
-  z-index: 5;
-}
-.flapLeft{
-  position:absolute;
-  inset:0;
+    /* Sello - botón activo */
+    .sealBtn{
+      position:absolute;
+      left:50%;
+      top:56%;                    /* ✅ baja/sube el sello aquí */
+      transform: translate(-50%,-50%);
+      width:70px;                 /* ✅ tamaño del sello */
+      height:70px;
+      z-index:10;
+      background:none;
+      border:none;
+      cursor:pointer;
+      padding:0;
+    }
+    .sealBtn img{
+      width:100%;
+      height:100%;
+      object-fit:contain;
+      filter: drop-shadow(0 2px 5px rgba(0,0,0,.18)); /* sombra suave (no protagonista) */
+    }
 
-  background:
-    linear-gradient(to right,
-      rgba(0,0,0,.32) 0%,
-      rgba(0,0,0,.16) 35%,
-      transparent 75%
-    ),
-    var(--env-edge);
+    /* Pase personal (sobresale tipo TikTok) */
+    .paseWrap{
+      position:absolute;
+      left:50%;
+      top:92%;
+      transform: translate(-50%, -50%);
+      z-index:50;
+      display:flex;
+      justify-content:center;
+    }
+    .paseWrap img{
+      width: 430px;          /* ✅ grande */
+      max-width: 115%;       /* ✅ puede ser más ancho que el sobre */
+      filter: drop-shadow(0 26px 45px rgba(0,0,0,.28));
+    }
 
-  clip-path: polygon(0 0, 50% 50%, 0 100%);
-  z-index: 4;
-}
-
-.flapRight{
-  position:absolute;
-  inset:0;
-
-  background:
-    linear-gradient(to left,
-      rgba(0,0,0,.32) 0%,
-      rgba(0,0,0,.16) 35%,
-      transparent 75%
-    ),
-    var(--env-edge);
-
-  clip-path: polygon(100% 0, 50% 50%, 100% 100%);
-  z-index: 4;
-}
-
-.flapBottom{
-  position:absolute; inset:0;
-  background: var(--env);
-  clip-path: polygon(0 100%, 50% 48%, 100% 100%);
-  z-index:1;
-  filter: brightness(.97);
-}
-
-/* TEXTO CURVO */
-.arcText{
-  position:absolute;
-  left:50%;
-  top:40%;
-  transform: translate(-50%,-50%);
-  width:220px;
-  height:120px;
-  z-index:8;
-  pointer-events:none;
-}
-.arcText text{
-  font-family: Georgia, "Times New Roman", serif;
-  font-weight: 690;
-
-  letter-spacing: 1px;
-  text-transform: uppercase;
-
-  fill: #1f2937;
-  font-size: 14px;
-}
-
-/* ===== SELLO (BOTÓN) ===== */
-.sealShadow{
-  position:absolute;
-  left:50%;
-  top:60%;
-  transform:translate(-50%,-50%);
-  width:120px;
-  height:26px;
-  border-radius:999px;
-  background:rgba(2,20,40,.22);
-  filter:blur(14px);
-  z-index:6;
-}
-
-.sealBtn{
-  position:absolute;
-  left:50%;
-  top:56%;
-  transform:translate(-50%,-50%);
-
-  width:60px;    /* 🔹 tamaño del sello */
-  height:60px;
-
-  z-index:10;
-  background:none;
-  border:none;
-  cursor:pointer;
-  padding:0;
-}
-.sealBtn img{
-  width:100%;
-  height:100%;
-  object-fit:contain;
-  /* sombra muy leve */
-  filter: drop-shadow(0 2px 4px rgba(0,0,0,.15));
-}
-
-/* ===== PASE PERSONAL ===== */
-.paseWrap{
-  position: absolute;
-  left: 50%;
-  top: 90%;                  /* ✅ más abajo para que sobresalga */
-  transform: translate(-50%, -50%);
-  z-index: 50;
-  display: flex;
-  justify-content: center;
-}
-
-.paseWrap img{
-  width: 440px;              /* ✅ más grande */
-  max-width: 112%;           /* ✅ permite que sea más ancho que el sobre */
-  filter: drop-shadow(0 26px 45px rgba(0,0,0,.28));
-}
-
-  
-</style>
+    /* Responsive fino */
+    @media (max-width: 380px){
+      .hero img{ width: 270px; }
+      .subtitle{ font-size: 26px; }
+      .paseWrap img{ width: 380px; max-width: 118%; }
+    }
+  </style>
 </head>
 
 <body>
-<section class="page1">
-  <div class="frame">
-    <div class="card">
+  <section class="page1">
+    <div class="frame">
+      <div class="card">
 
-      <!-- Elefante -->
-      <div class="hero">
-        <img src="elefante-nombre.png" alt="Elefantito">
-      </div>
+        <!-- Elefante -->
+        <div class="hero">
+          <img src="elefante-nombre.png" alt="Elefantito">
+        </div>
 
-      <!-- 👇 TEXTO EXACTAMENTE DEBAJO -->
-      <div class="subtitle">Mi Baby Shower</div>
+        <!-- Texto debajo -->
+        <div class="subtitle">Mi Baby Shower</div>
 
-      <!-- Sobre -->
-      <div class="envelopeWrap">
-        <div class="envelope">
-
-          <div class="flapBottom"></div>
-          <div class="flapLeft"></div>
-          <div class="flapRight"></div>
-          <div class="flapTop"></div>
-
-          <svg class="arcText" viewBox="0 0 220 120">
-            <defs>
-              <path id="arcPath" d="M 28 96 Q 110 20 192 96"/>
-            </defs>
-            <text>
-              <textPath href="#arcPath" startOffset="50%" text-anchor="middle">
-                VER INVITACIÓN
-              </textPath>
-            </text>
-          </svg>
-
-          <div class="sealShadow"></div>
-
-          <!-- BOTÓN -->
-          <button class="sealBtn" onclick="goNext()" aria-label="Ver invitación">
-            <img src="sello.png" alt="Sello luna">
-          </button>
-
+        <!-- Sobre (imagen) + sello + texto curvo + pase sobresaliente -->
         <div class="envelopeWrap">
-  <div class="envelope">
-    <!-- pliegues del sobre -->
-  </div>
 
-  <!-- ✅ pase fuera del sobre -->
-  <div class="paseWrap">
-    <img src="pase.png" alt="Pase personal">
-  </div>
-</div>
+          <div class="envelopeImg" aria-label="Sobre">
+            <!-- Texto curvo -->
+            <svg class="arcText" viewBox="0 0 220 120" aria-hidden="true">
+              <defs>
+                <path id="arcPath" d="M 28 96 Q 110 20 192 96"/>
+              </defs>
+              <text>
+                <textPath href="#arcPath" startOffset="50%" text-anchor="middle">
+                  VER INVITACIÓN
+                </textPath>
+              </text>
+            </svg>
+
+            <!-- Botón sello -->
+            <button class="sealBtn" type="button" onclick="goNext()" aria-label="Ver invitación">
+              <img src="sello.png" alt="Sello luna">
+            </button>
+          </div>
+
+          <!-- Pase (sobresale) -->
+          <div class="paseWrap">
+            <img src="pase.png" alt="Pase personal">
+          </div>
+
+        </div>
+
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<script>
-function goNext(){
-  window.location.href = "invitacion.html";
-}
-</script>
+  <script>
+    function goNext(){
+      // Hoja 2
+      window.location.href = "invitacion.html";
+    }
+  </script>
 </body>
 </html>
