Update background image path in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       position: relative;
       overflow: visible;
 
-      background: url("img/sobre.png") center / contain no-repeat;
+      background: url("sobre.png") center / contain no-repeat;
     }
 
     /* Texto curvo - Georgia */
