Update image paths to include 'img/' directory

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       border-radius: var(--radius-card);
       box-shadow: var(--shadow);
 
-      background: url("fondo.png") center / cover no-repeat;
+      background: url("img/fondo.png") center / cover no-repeat;
     }
 
     /* Opcional: capa blanca suave para legibilidad */
@@ -111,7 +111,7 @@
       position: relative;
       overflow: visible;
 
-      background: url("sobre.png") center / contain no-repeat;
+      background: url("img/sobre.png") center / contain no-repeat;
     }
 
     /* Texto curvo - Georgia */
@@ -187,7 +187,7 @@
 
         <!-- Elefante -->
         <div class="hero">
-          <img src="elefante-nombre.png" alt="Elefantito">
+          <img src="img/elefante-nombre.png" alt="Elefantito">
         </div>
 
         <!-- Texto debajo -->
@@ -211,13 +211,13 @@
 
             <!-- Botón sello -->
             <button class="sealBtn" type="button" onclick="goNext()" aria-label="Ver invitación">
-              <img src="sello.png" alt="Sello luna">
+              <img src="img/sello.png" alt="Sello luna">
             </button>
           </div>
 
           <!-- Pase (sobresale) -->
           <div class="paseWrap">
-            <img src="pase.png" alt="Pase personal">
+            <img src="img/pase.png" alt="Pase personal">
           </div>
 
         </div>
