--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body{
 .card{
   position:relative;
   overflow:visible;
-  padding:18px 16px 200px;
+  padding:18px 16px 170px;
   text-align:center;
 
   border-radius:22px;
@@ -91,7 +91,7 @@ body{
 .envelopeImg{
   width:90%;
   aspect-ratio:16/10;
-  position:relative;
+  position:relative, center;
   background:url("sobre.png") center / contain no-repeat;
 }
 
@@ -156,7 +156,7 @@ body{
   /* Tarjeta más compacta en alto */
   .card{
     padding-top: 14px;
-    padding-bottom: 160px;   /* ⬆️ menos espacio vertical */
+    padding-bottom: 170px;   /* ⬆️ menos espacio vertical */
   }
 
   /* Elefante más pequeño */
