--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ body{
 }
 
 .paseWrap img{
-  width:540px;                     /* 🔥 MÁS GRANDE */
+  width:460px;                     /* 🔥 MÁS GRANDE */
   max-width:160%;                  /* 🔥 sobresale del sobre */
   height:auto;
-  filter:drop-shadow(0 24px 45px rgba(0,0,0,.28));
+  filter:none;
 }
 
 /* ===== Animación al tocar sello ===== */
