Update background image path in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body{
   width:100%;
   aspect-ratio:16/10;
   position:relative;
-  background:url("sobre.png") center / contain no-repeat;
+  background:url("img/sobre.png") center / contain no-repeat;
 }
 
 /* Texto curvo (Georgia) */
