--- a/invitacion.html
+++ b/invitacion.html
@@ -142,8 +142,7 @@
     width:100%;
     border-radius:16px;
     overflow:hidden;
-    border:1px solid rgba(31,41,55,.10);
-    background: rgba(255,255,255,.7);
+    background: none;
     box-shadow: 0 12px 30px rgba(2,20,40,.08);
   }
   .imgBox img{ display:block; width:100%; height:auto; }
@@ -193,9 +192,8 @@
             </button>
           </div>
 
-          <div class="title">Baby Shower</div>
-          <div class="script">Luis Arturo</div>
-
+          <div class="title">Mi Baby Shower</div>
+          
           <div class="imgBox">
             <img src="img/elefante-nombre.png" alt="Imagen temática">
           </div>
@@ -255,10 +253,10 @@
           </section>
 
           <section class="card">
-            <div class="sectionTitle">Nota</div>
+            <div class="sectionTitle">Gracias</div>
             <div style="font-size:14px;color:#1f2937;line-height:1.35;">
-              Te esperamos para celebrar la llegada de nuestro bebé 💙<br>
-              ¡Gracias por acompañarnos!
+              por ser parte de este día especial 💙<br>
+              
             </div>
           </section>
 
