--- a/invitacion.html
+++ b/invitacion.html
@@ -50,6 +50,17 @@
     z-index:0;
     pointer-events:none;
   }
+ .heroTitle{
+  text-align:center;
+  font-family:"Brush Script MT","Brush Script Std",cursive;
+  font-size:38px;
+  font-weight:700;                 /* simula negrita */
+  color:#1a2533;
+  letter-spacing:.5px;
+  margin:6px 0 10px;
+  text-shadow:
+    0.6px 0.6px 0 rgba(0,0,0,.08); /* refuerzo visual */
+}
 
   .content{
     position:relative;
@@ -192,12 +203,12 @@
             </button>
           </div>
 
-          <div class="title">Mi Baby Shower</div>
+          <div class="heroTitle">Mi Baby Shower</div>
           
           <div class="imgBox">
             <img src="img/elefante-nombre.png" alt="Imagen temática">
           </div>
-          <div class="hint">Desliza hacia abajo para ver los detalles</div>
+          
 
           <section class="card">
             <div class="sectionTitle">Detalles</div>
