--- a/invitacion.html
+++ b/invitacion.html
@@ -50,6 +50,15 @@
     z-index:0;
     pointer-events:none;
   }
+ .preTitle{
+  text-align:center;
+  font-family: Georgia, "Times New Roman", serif;
+  font-size:14px;
+  font-weight:400;
+  color: rgba(31,41,55,.75);
+  line-height:1.2;
+  margin: 2px 0 6px;   /* poco espacio arriba y abajo */
+}
  .heroTitle{
   text-align:center;
   font-family:"Brush Script MT","Brush Script Std",cursive;
@@ -203,7 +212,8 @@
             </button>
           </div>
 
-          <div class="heroTitle">Mi Baby Shower</div>
+         <div class="preTitle">La dulce espera está por <br> terminar, te invito a:</div> 
+         <div class="heroTitle">Mi Baby Shower</div>
           
           <div class="imgBox">
             <img src="img/elefante-nombre.png" alt="Imagen temática">
