--- a/invitacion.html
+++ b/invitacion.html
@@ -159,13 +159,12 @@
   .rowText .value{ font-size:14px; color:#1f2937; font-weight:600; line-height:1.25; }
 
   .imgBox{
-  width: 60%;      /* prueba 80%, 70%, 60% */
+  width: 70%;      /* prueba 80%, 70%, 60% */
   max-width: 300px; /* tamaño máximo */
-  margin: 0 auto;  /* centrar */
-  border-radius: 16px;
-  overflow: hidden;
-  background: none;
-  box-shadow: 0 12px 30px rgba(2,20,40,.08);
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  overflow: visible;
 }
   .imgBox img{ display:block; width:100%; height:auto; }
 
