--- a/invitacion.html
+++ b/invitacion.html
@@ -310,15 +310,45 @@
   <div class="parentsLabel">Mis Papis</div>
   <div class="parentsNames">Karla & Arturo</div>
 
-  <div class="eventDate">
-    <div class="day">SÁBADO</div>
-    <div class="dateLine">
-      <span class="month">ENERO</span>
-      <span class="number">24</span>
-      <span class="year">2025</span>
-    </div>
-    <div class="time">6:00 PM</div>
+  <div class="eventDate2">
+  <div class="topLine">
+    <span class="dow">SÁBADO</span>
+    <span class="month">ENERO</span>
   </div>
+
+  <div class="midLine">
+    <span class="bigDay">24</span>
+    <span class="year">2026</span>
+  </div>
+
+  <div class="timeLine">6:00 PM</div>
+</div>
+
+<div class="countdownCard">
+  <div class="countTitle">¿CUÁNTO FALTA?</div>
+
+  <div class="countGrid" id="countdown">
+    <div class="cBox">
+      <div class="cNum" id="cdDays">00</div>
+      <div class="cLab">DÍAS</div>
+    </div>
+    <div class="cBox">
+      <div class="cNum" id="cdHours">00</div>
+      <div class="cLab">HORAS</div>
+    </div>
+    <div class="cBox">
+      <div class="cNum" id="cdMins">00</div>
+      <div class="cLab">MIN</div>
+    </div>
+    <div class="cBox">
+      <div class="cNum" id="cdSecs">00</div>
+      <div class="cLab">SEG</div>
+    </div>
+  </div>
+
+  <div class="countNote" id="cdNote"></div>
+</div>
+
 
 </div>
 
