--- a/invitacion.html
+++ b/invitacion.html
@@ -80,7 +80,7 @@
 .parentsPhoto{
   display:inline-block;
   padding:6px;
-  box-shadow:0 10px 25px rgba(0,0,0,.18);
+  /*box-shadow:0 10px 25px rgba(0,0,0,.18);*/
   margin-bottom:10px;
 }
 
