--- a/invitacion.html
+++ b/invitacion.html
@@ -94,13 +94,14 @@
 
   /* Caja de imagen genérica */
   .imgBox{
-    width:100%;
-    border-radius:16px; overflow:hidden;
-    border:1px solid rgba(31,41,55,.10);
-    background: rgba(255,255,255,.7);
-    box-shadow:0 12px 30px rgba(2,20,40,.08);
-    margin-bottom:10px;
-  }
+  width: 60%;      /* prueba 80%, 70%, 60% */
+  max-width: 300px; /* tamaño máximo */
+  margin: 0 auto;  /* centrar */
+  border-radius: 16px;
+  overflow: hidden;
+  background: none;
+  box-shadow: 0 12px 30px rgba(2,20,40,.08);
+}
   .imgBox img{ display:block; width:100%; height:auto; }
 
   /* Bloque padres */
