--- a/invitacion.html
+++ b/invitacion.html
@@ -115,9 +115,17 @@
     font-size:13px; color: rgba(31,41,55,.65); margin-top:6px;
   }
   .parentsNames{
-    font-family: Georgia, "Times New Roman", serif;
-    font-size:18px; font-weight:700; color:#1f2937; margin:2px 0 8px;
-  }
+  font-family: Georgia, "Times New Roman", serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: #1f2937;
+  /* 👇 espacio */
+  margin: 6px 0 14px;
+  /* 👇 línea inferior */
+  display: inline-block;
+  padding-bottom: 6px;
+  border-bottom: 2px solid rgba(31,41,55,0.25);
+}
 
   /* Fecha estilo TikTok */
   .eventDate2{ text-align:center; margin-top:6px; margin-bottom:10px; color:#1f2937; }
