--- a/invitacion.html
+++ b/invitacion.html
@@ -97,7 +97,7 @@
   width: 60%;      /* prueba 80%, 70%, 60% */
   max-width: 300px; /* tamaño máximo */
   margin: 0 auto;  /* centrar */
-  border-radius: 16px;
+  /*border-radius: 16px;*/
   overflow: hidden;
   box-shadow: 0 12px 30px rgba(2,20,40,.08);
 }
