--- a/invitacion.html
+++ b/invitacion.html
@@ -127,22 +127,57 @@
   border-bottom: 2px solid rgba(31,41,55,0.25);
 }
 
-  /* Fecha estilo TikTok */
-  .eventDate2{ text-align:center; margin-top:6px; margin-bottom:10px; color:#1f2937; }
-  .eventDate2 .topLine{
-    display:flex; justify-content:center; gap:10px;
-    font-size:12px; letter-spacing:1.4px; font-weight:700;
-    color: rgba(31,41,55,.70); text-transform:uppercase;
-  }
-  .eventDate2 .midLine{
-    display:flex; justify-content:center; align-items:baseline; gap:10px; margin-top:2px;
-  }
-  .eventDate2 .bigDay{ font-size:44px; font-weight:800; line-height:1; }
-  .eventDate2 .year{ font-size:14px; font-weight:700; letter-spacing:1px; color: rgba(31,41,55,.70); }
-  .eventDate2 .timeLine{
-    margin-top:2px; font-size:12px; letter-spacing:1.2px; font-weight:700;
-    color: rgba(31,41,55,.70); text-transform:uppercase;
-  }
+  /* ===== FECHA ESTILO TIKTOK ===== */
+.eventDateTikTok{
+  text-align:center;
+  margin: 18px 0 18px;
+  color:#1f2937;
+}
+
+.dateRow{
+  display:flex;
+  justify-content:center;
+  gap:10px;
+  margin-bottom:4px;
+}
+
+.dayName,
+.monthName{
+  font-size:12px;
+  font-weight:800;
+  letter-spacing:1.6px;
+  padding:4px 10px;
+  background: rgba(255,255,255,0.75);
+  border-radius:6px;
+}
+
+.dateMain{
+  display:flex;
+  justify-content:center;
+  align-items:flex-end;
+  gap:10px;
+  line-height:1;
+}
+
+.dayNumber{
+  font-size:56px;
+  font-weight:900;
+}
+
+.yearNumber{
+  font-size:16px;
+  font-weight:700;
+  letter-spacing:1px;
+  margin-bottom:8px;
+}
+
+.dateTime{
+  margin-top:6px;
+  font-size:13px;
+  font-weight:700;
+  letter-spacing:1.2px;
+}
+
 
   /* Contador */
   .countdownCard{
@@ -222,17 +257,20 @@
             <div class="parentsLabel">Mis Papis</div>
             <div class="parentsNames">Karla & Arturo</div>
 
-            <div class="eventDate2">
-              <div class="topLine">
-                <span class="dow">SÁBADO</span>
-                <span class="month">ENERO</span>
-              </div>
-              <div class="midLine">
-                <span class="bigDay">24</span>
-                <span class="year">2026</span>
-              </div>
-              <div class="timeLine">6:00 PM</div>
-            </div>
+            <div class="eventDateTikTok">
+  <div class="dateRow">
+    <span class="dayName">SÁBADO</span>
+    <span class="monthName">ENERO</span>
+  </div>
+
+  <div class="dateMain">
+    <span class="dayNumber">24</span>
+    <span class="yearNumber">2026</span>
+  </div>
+
+  <div class="dateTime">6:00 PM</div>
+</div>
+
 
             <div class="countdownCard">
               <div class="countTitle">¿CUÁNTO FALTA?</div>
