--- a/invitacion.html
+++ b/invitacion.html
@@ -99,7 +99,7 @@
   margin: 0 auto;  /* centrar */
   /*border-radius: 16px;*/
   overflow: hidden;
-  box-shadow: 0 12px 30px rgba(2,20,40,.08);
+  /*box-shadow: 0 12px 30px rgba(2,20,40,.08);*/
 }
   .imgBox img{ display:block; width:100%; height:auto; }
 
